Fix misaligned minutes paragraphs
Former-commit-id: fe503e284248984db87b13e6c729bf2f0fb29441 [formerly 82d76fa1b99ce2f8ae36e24b68338060807be259]
Former-commit-id: 58c1d4472a7630ebbe0b65271aa827b84d33d1c7

--- a/resources/css/content-pages/minutes.css
+++ b/resources/css/content-pages/minutes.css
@@ -9,7 +9,6 @@ header {
   margin-left: auto;
   margin-right: auto;
   max-width: 90em;
-  padding-left: 5%;
 }
 
 .minutes-line {
